# HBB

./: CMakeLists.txt  README.md  run.py
exampleCode/: CMakeLists.txt
exampleCode/my_client/: CMakeLists.txt  my_client.cpp  mymsg.pb.h  mymsg.proto
exampleCode/my_service/: CMakeLists.txt  my_service.cpp  mymsg.pb.cc
image/: 绘图1.eddx
src/LXMysql/: CMakeLists.txt  LXData.h  LXMysql.cpp  LXMysql.h
src/basicBox/: CMakeLists.txt  HBBcom_task.cpp  HBBcom_task.h  HBBconfig.h  HBBlog_client.cpp  HBBlog_client.h  HBBmsg.h  HBBmsg.pb.cc  HBBmsg.pb.h  HBBmsg.proto  HBBmsg_event.cpp  HBBmsg_event.h  HBBregister_client.cpp  HBBregister_client.h  HBBservice.cpp  HBBservice.h  HBBservice_client.cpp  HBBservice_client.h  HBBservice_handle.cpp  HBBservice_handle.h  HBBssl.cpp  HBBssl.h  HBBssl_ctx.cpp  HBBssl_ctx.h  HBBtask.h  HBBthread.cpp  HBBthread.h  HBBthread_pool.cpp  HBBthread_pool.h  HBBtools.cpp  HBBtools.h  HBBtype.pb.cc  HBBtype.pb.h  HBBtype.proto
src/gateway_server/: CMakeLists.txt  HBB_gateway.cpp  HBBrouter_handle.cpp  HBBrouter_handle.h  HBBrouter_server.cpp  HBBrouter_server.h  HBBservice_proxy.cpp  HBBservice_proxy.h  HBBservice_proxy_client.cpp  HBBservice_proxy_client.h
src/log_server/: CMakeLists.txt  HBBlog_dao.cpp  HBBlog_dao.h  HBBlog_handle.cpp  HBBlog_handle.h  HBBlog_server.cpp
src/register_server/: CMakeLists.txt  HBBregister_handle.cpp  HBBregister_handle.h  HBBregister_server.cpp  HBBregister_server.h  register_server.cpp
